# mie

./: .gitignore  CITATION.cff  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  release.txt
.github/scripts/: update_citation.py
.github/workflows/: test.yaml
doc/: CHANGEFILE
miehps/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gold0.data  gold1.data  gold10.data  gold11.data  gold12.data  gold13.data  gold14.data  gold2.data  gold3.data  gold4.data  gold5.data  gold6.data  gold7.data  gold8.data  gold9.data  miehps.cpp  miehps.h  miehpstimingtestclass.cpp  oogold  oogold.cpp  oonewcallhpsmie  oonewcallhpsmie.cpp  oowaterdroplet  oowaterdroplet.cpp  q.data  timingtestclass
miehps/gnuplot_option_files/: plot_gold2.gpl  plot_q_gold.gpl  plot_qabs.gpl  plot_qext.gpl  plot_qsca.gpl  plot_unpol_int.gpl  plot_unpol_int_gold.gpl
mma/: Makefile  Mie.m  Mie.tm  Mietm.c
src/: Makefile  cobweb.pl  libmie.h  mie.c  mie.h  mie.w  mie_array.c  mie_array.h  mie_array.w  mie_complex.c  mie_complex.h  mie_complex.w  mie_cylinder.c  mie_cylinder.h  mie_cylinder_main.c  mie_cylinder_main.w  mie_doc.bux  mie_doc.w  mie_legendre.c  mie_legendre.h  mie_legendre.w  mie_lobatto.c  mie_lobatto.h  mie_lobatto.w  mie_main.c  mie_main.w  mie_root.c  mie_root.h  mie_root.w  mygetopt.c  test_latex.c  test_latex.w  test_mie.c  test_mie.w  test_mie_array.c  test_mie_lobatto.c  version.c  version.pl
